install.sh done